cmake_minimum_required(VERSION 3.16)
project(gcn-assembly-study)
add_compile_options(--offload-arch=gfx90a)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)
add_definitions(-D__HIP__)
add_subdirectory(lesson_0)
add_subdirectory(lesson_1)
add_subdirectory(lesson_2)
add_subdirectory(lesson_3)
#add_subdirectory(lesson_4)
add_subdirectory(lesson_5)
add_subdirectory(lesson_6)