cmake_minimum_required(VERSION 3.16)
project(lesson_1)
add_executable(${PROJECT_NAME} main.cpp)
find_package(hip REQUIRED)
target_link_libraries(${PROJECT_NAME} hip::device)
include(../asm.cmake)
add_custom_target(asm_vector_add_target)
add_dependencies(${PROJECT_NAME} asm_vector_add_target)
build_asm(vector_add asm_vector_add_target)