cmake_minimum_required(VERSION 3.16)
project(lesson_3)
add_executable(${PROJECT_NAME} main.cpp)
find_package(hip REQUIRED)
target_link_libraries(${PROJECT_NAME} hip::device)
include(../asm.cmake)
add_custom_target(asm_max_target)
add_dependencies(${PROJECT_NAME} asm_max_target)
build_asm(max asm_max_target)