cmake_minimum_required(VERSION 3.16)
project(lesson_4)
# add_compile_options(-S)
add_executable(${PROJECT_NAME} main.cpp)
find_package(hip REQUIRED)
target_link_libraries(${PROJECT_NAME} hip::device)
include(../asm.cmake)
add_custom_target(asm_softmax_target)
add_dependencies(${PROJECT_NAME} asm_softmax_target)
gen_and_build_asm(softmax asm_softmax_target)