cmake_minimum_required(VERSION 3.16)
project(lesson_5)
add_executable(${PROJECT_NAME} main.cpp)
find_package(hip REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE hip::device)
include(../asm.cmake)
add_custom_target(asm_gemv_target)
add_dependencies(${PROJECT_NAME} asm_gemv_target)
build_asm(gemv asm_gemv_target)