cmake_minimum_required(VERSION 3.16)
project(lesson_6)
add_executable(${PROJECT_NAME} main.cpp)
find_package(hip REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE hip::device)
include(../asm.cmake)
add_custom_target(asm_gemm_target)
add_dependencies(${PROJECT_NAME} asm_gemm_target)
build_asm(gemm asm_gemm_target)
build_asm(gemm_mfma asm_gemm_target)